crates/reinhardt-core/crates/macros/tests/ui/rel/fail/missing_to.stderr
error: #[rel(foreign_key, ...)] does not accept 'to' parameter. Use ForeignKeyField<Target> type instead.
  --> tests/ui/rel/fail/missing_to.rs:22:2
   |
22 |     #[rel(foreign_key, to = User)]
   |     ^

error[E0277]: the trait bound `User: serde::Serialize` is not satisfied
  --> tests/ui/rel/fail/missing_to.rs:9:1
   |
 9 | #[model(app_label = "test", table_name = "users")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Serialize` is not implemented for `User`
  --> tests/ui/rel/fail/missing_to.rs:10:1
   |
10 | pub struct User {
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `User` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             &bson::raw::array::RawArray
             &bson::raw::cstr::CStr
             &bson::raw::document::RawDocument
             ()
             (T,)
             (T0, T1)
           and $N others
note: required by a bound in `Model`
  --> $WORKSPACE/crates/reinhardt-db/crates/orm/src/model.rs
   |
   | pub trait Model: Serialize + for<'de> Deserialize<'de> + Send + Sync {
   |                  ^^^^^^^^^ required by this bound in `Model`
   = note: this error originates in the derive macro `reinhardt::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `User: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/rel/fail/missing_to.rs:9:1
   |
 9 | #[model(app_label = "test", table_name = "users")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `for<'de> reinhardt_web::prelude::Deserialize<'de>` is not implemented for `User`
  --> tests/ui/rel/fail/missing_to.rs:10:1
   |
10 | pub struct User {
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `User` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `reinhardt_web::prelude::Deserialize<'de>`:
             `&'a [u8]` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a bson::raw::array::RawArray` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a bson::raw::document::RawDocument` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a reinhardt_web::core::serde::serde_json::value::RawValue` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a serde_bytes::bytearray::ByteArray<N>` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a serde_bytes::bytes::Bytes` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a std::path::Path` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a str` implements `reinhardt_web::prelude::Deserialize<'de>`
           and $N others
note: required by a bound in `Model`
  --> $WORKSPACE/crates/reinhardt-db/crates/orm/src/model.rs
   |
   | pub trait Model: Serialize + for<'de> Deserialize<'de> + Send + Sync {
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Model`
   = note: this error originates in the derive macro `reinhardt::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `User: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/rel/fail/missing_to.rs:10:12
   |
10 | pub struct User {
   |            ^^^^ unsatisfied trait bound
   |
help: the trait `for<'de> reinhardt_web::prelude::Deserialize<'de>` is not implemented for `User`
  --> tests/ui/rel/fail/missing_to.rs:10:1
   |
10 | pub struct User {
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `User` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `reinhardt_web::prelude::Deserialize<'de>`:
             `&'a [u8]` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a bson::raw::array::RawArray` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a bson::raw::document::RawDocument` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a reinhardt_web::core::serde::serde_json::value::RawValue` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a serde_bytes::bytearray::ByteArray<N>` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a serde_bytes::bytes::Bytes` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a std::path::Path` implements `reinhardt_web::prelude::Deserialize<'de>`
             `&'a str` implements `reinhardt_web::prelude::Deserialize<'de>`
           and $N others
note: required by a bound in `Model`
  --> $WORKSPACE/crates/reinhardt-db/crates/orm/src/model.rs
   |
   | pub trait Model: Serialize + for<'de> Deserialize<'de> + Send + Sync {
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Model`

error[E0277]: the trait bound `User: serde::Serialize` is not satisfied
  --> tests/ui/rel/fail/missing_to.rs:10:12
   |
10 | pub struct User {
   |            ^^^^ unsatisfied trait bound
   |
help: the trait `Serialize` is not implemented for `User`
  --> tests/ui/rel/fail/missing_to.rs:10:1
   |
10 | pub struct User {
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `User` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             &bson::raw::array::RawArray
             &bson::raw::cstr::CStr
             &bson::raw::document::RawDocument
             ()
             (T,)
             (T0, T1)
           and $N others
note: required by a bound in `Model`
  --> $WORKSPACE/crates/reinhardt-db/crates/orm/src/model.rs
   |
   | pub trait Model: Serialize + for<'de> Deserialize<'de> + Send + Sync {
   |                  ^^^^^^^^^ required by this bound in `Model`
